Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128548

atal error: QRhiTexture: No such file or directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.0 RC, 6.9.0 FF
    • 6.7.2
    • Qt RHI
    • None
    • ArchLinux Qt 6.7.2
    • All
    • 35791751a (dev), 30981cf52 (6.8)

      On ArchLinux, can't find QRhiTexture and QRhi headers file.
      I can use "rhi/qrhi.h" for include. But Qt document(Qt 6.7.2) say:

       Header:  #include <QRhiTexture>
       CMake: find_package(Qt6 REQUIRED COMPONENTS Gui) 
      target_link_libraries(mytarget PRIVATE Qt6::Gui)
       qmake: QT += gui
       Since: Qt 6.6
       Inherits: QRhiResource

        For Gerrit Dashboard: QTBUG-128548
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            zccrs JiDe Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes